cmake_minimum_required(VERSION 3.1)
project( tomo_tv ) 
add_executable( tomo_tv tomo_tv.cxx )
find_package( OpenCV )
target_link_libraries( tomo_tv ${OpenCV_LIBS} ) 
include_directories( ./Dependencies/Eigen/ )
include_directories( tomo_tv ${OpenCV_INCLUDE_DIRS} ) 
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -O2 -Wno-div-by-zero")